--- a/Menu.html
+++ b/Menu.html
@@ -2,9 +2,18 @@
 <head>
 <meta charset="windows-1251">
 <style type="text/css">
+body{background-color: #d2b48c;
+margin-left: 20%;
+margin-right: 20%;
+border: 1px dotted grey;
+}
 p {  
     font-family: Lucida Console, sans-serif; 
     color: red;
+   }
+h1 {  
+    font-family: Lucida Console, sans-serif; 
+   color: blue;
    }
 </style>
 <title>
